--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,11 @@
             <version>1.6.2</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>27.0.1-jre</version>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>com.google.guava</groupId>-->
+        <!--<artifactId>guava</artifactId>-->
+        <!--<version>27.0.1-jre</version>-->
+        <!--</dependency>-->
         <!-- test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
